--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@
 }
 
 :root {
+  --purple: ;
   --white: #fafafb;
   --gray: #57575786;
   --blue-light: #04d4c3;
   --blue: #00aeff;
   --green: #2c7b90;
-  --grisito: #5757571f;
+  --grisito: #57575763;
 }
 
 body {
@@ -22,7 +23,8 @@ body {
   padding: 0;
   height: 100vh;
   width: 100vw;
-  background-image: url(./public/fondo\ 2.jpg);
+  background-image: url(/public/fn2.jpg);
+  
   background-size: cover;
   background-position: center;
   font-family: "Roboto", sans-serif;
@@ -30,11 +32,10 @@ body {
 
 /*container*/
 .container {
-  background-color: var(--white);
   height: 30rem;
   width: 27rem;
   border-radius: 16px;
-  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.384);
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -62,7 +63,7 @@ body {
   align-items: center;
   background-color: var(--white);
   border-radius: 5rem;
-  box-shadow: 0px 0px 10px 7px rgba(255, 255, 255, 0.1);
+  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.384);
   display: flex;
   overflow: hidden;
   padding: 5px 20px;
@@ -73,6 +74,8 @@ body {
 /*AGREGAR TAREA*/
 .agregar-juego {
   background-color: var(--white);
+  border-radius: 1rem;
+  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.384);
   height: 2.5rem;
   display: flex;
   align-items: center;
